k8s/bird_api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bird-api
  namespace: bird-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bird-api
  template:
    metadata:
      labels:
        app: bird-api
    spec:
      containers:
      - name: bird-api
        image: charlesngugi023/birdapi:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "512m"
        ports:
        - containerPort: 4201
