k8s/bird_api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bird-api
  namespace: bird-api
spec:
  selector:
    app: bird-api
  ports:
  - protocol: TCP
    port: 4201
    targetPort: 4201
  type: ClusterIP
