k8s/bird_image_api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bird-image-api
  namespace: bird-api
spec:
  selector:
    app: bird-image-api
  ports:
  - protocol: TCP
    port: 4200
    targetPort: 4200
  type: ClusterIP
