k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bird-api-ingress
  namespace: bird-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bird-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bird-api
            port:
              number: 4201
      - path: /image
        pathType: Prefix
        backend:
          service:
            name: bird-image-api
            port:
              number: 4200

  - host: grafana.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80

  - host: prometheus.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
